# eink_server

./: .env.example  .gitignore  README.md  pyproject.toml  setup.py
backend/: eink_display.py  server.py  show_image_on_eink.py
backend/image_transform/: palettes.py  transform_image.py
